# nori-contacts-server

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  example.sql  main.py  pyproject.toml
src/: main.py  models.py
src/api/: dependencies.py  router.py
src/api/routers/: bridge_telegram.py  contact_card.py  platform_contact.py
src/api/routers/bridges/: bridge_discord.py  bridge_telegram.py
src/core/: auth.py  config.py
src/db/: init_db.py  session.py
src/db/repositories/: contact_cards_repository.py  platform_contact_repository.py
src/schemas/: basic.py  bridge.py  bridge_discord.py  bridge_telegram.py  contact_card.py  platform_contact.py
src/services/: bridge_discord_service.py  bridge_telegram_service.py  contact_card_service.py  external_api.py  platform_contact_service.py
