[project]
name = "nori-contacts-server"
version = "0.1.0"
description = "A server to store the user contacts information of nori."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.14",
    "pydantic-settings>=2.10.1",
    "ruff>=0.12.1",
]
